Notification support via the libnotify library

--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,7 @@ AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
 
 AC_PROG_CC
+AM_PROG_CC_C_O
 
 AC_CHECK_HEADERS(
 	[curl/curl.h],
@@ -32,6 +33,19 @@ AC_ARG_ENABLE(
 AS_IF([test "x$enable_debug" = "xyes"],
 	[AC_DEFINE([DEBUG], [1], [Define to 1 if the debugging is enabled])]
 )
+
+# support for libnotify
+AC_ARG_ENABLE(
+	[libnotify],
+	AS_HELP_STRING([--enable-libnotify], [enable libnotify support])
+)
+AM_CONDITIONAL([ENABLE_LIBNOTIFY], [test "x$enable_libnotify" = "xyes"])
+AS_IF([test "x$enable_libnotify" = "xyes"], [
+	PKG_CHECK_MODULES(
+		[libnotify], [libnotify >= 0.7],
+		[AC_DEFINE([ENABLE_LIBNOTIFY], [1], [Define to 1 if the libnotify is enabled])]
+	)
+])
 
 AC_CONFIG_FILES([Makefile src/Makefile])
 AC_OUTPUT
