Watching changes of the configuration file
When inotify subsystem is available (Linux kernel > 2.6.13), use it for
watching changes in the configuration file, so background server instance
restart is not required any more.

--- a/configure.ac
+++ b/configure.ac
@@ -25,6 +25,9 @@ AC_CHECK_LIB(
 	[], [AC_MSG_ERROR([crypto library not found])]
 )
 
+# support for configuration reload
+AC_CHECK_HEADERS([sys/inotify.h])
+
 # support for debugging
 AC_ARG_ENABLE(
 	[debug],
