Source code cleanup

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@
 AM_CFLAGS = -Wall -Wextra
 
 bin_PROGRAMS = cmusfm
-cmusfm_SOURCES = main.c libscrobbler2.c cache.c config.c server.c
+cmusfm_SOURCES = main.c utils.c libscrobbler2.c cache.c config.c server.c
 cmusfm_CFLAGS =
 cmusfm_LDADD =
 
