Use container-based Travis infrastructure

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
+sudo: false
+
 language: c
 
-install:
-  - sudo apt-get install libcurl4-openssl-dev libnotify-dev
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libnotify-dev
 
 before_script:
   - autoreconf --install && mkdir build && cd build
