--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,7 +2,13 @@
 # Copyright (c) 2015 Arkadiusz Bokowy
 
 TESTS = \
-	test-cache
+	test-cache \
+	test-server-notify \
+	test-server-submit01 \
+	test-server-submit02
 
 check_PROGRAMS = \
-	test-cache
+	test-cache \
+	test-server-notify \
+	test-server-submit01 \
+	test-server-submit02
