Use pkg-config for configuration
3rd party libraries might be installed in custom locations, so the by-hand
checking will definitely fail in non-standard environments. By delegating
the checking part to the pkg-config we will minimize the risk of failure.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,13 +1,26 @@
 # cmusfm - Makefile.am
-# Copyright (c) 2014 Arkadiusz Bokowy
+# Copyright (c) 2014-2016 Arkadiusz Bokowy
 
 bin_PROGRAMS = cmusfm
-cmusfm_SOURCES = main.c utils.c libscrobbler2.c cache.c config.c server.c
-cmusfm_CFLAGS =
-cmusfm_LDADD =
+
+cmusfm_SOURCES = \
+	cache.c \
+	config.c \
+	libscrobbler2.c \
+	server.c \
+	utils.c \
+	main.c
+
+cmusfm_CFLAGS = \
+	@LIBCURL_CFLAGS@ \
+	@LIBCRYPTO_CFLAGS@
+
+cmusfm_LDADD = \
+	@LIBCURL_LIBS@ \
+	@LIBCRYPTO_LIBS@
 
 if ENABLE_LIBNOTIFY
 cmusfm_SOURCES += notify.c
-cmusfm_CFLAGS += @libnotify_CFLAGS@
-cmusfm_LDADD += @libnotify_LIBS@
+cmusfm_CFLAGS += @LIBNOTIFY_CFLAGS@
+cmusfm_LDADD += @LIBNOTIFY_LIBS@
 endif
