--- a/configure.ac
+++ b/configure.ac
@@ -1,36 +1,12 @@
 # cmusfm - configure.ac
-# Copyright (c) 2014-2015 Arkadiusz Bokowy
+# Copyright (c) 2014-2016 Arkadiusz Bokowy
 
-AC_INIT([cmusfm], [0.2.5], [arkadiusz.bokowy@gmail.com])
+AC_INIT([cmusfm], [0.3.0], [arkadiusz.bokowy@gmail.com])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([foreign subdir-objects -Wall -Werror])
 
 AC_PROG_CC
 AM_PROG_CC_C_O
-
-AC_CHECK_HEADERS(
-	[curl/curl.h],
-	[], [AC_MSG_ERROR([curl.h header not found])]
-)
-AC_CHECK_LIB(
-	[curl], [curl_easy_init],
-	[], [AC_MSG_ERROR([curl library not found])]
-)
-AC_CHECK_HEADERS(
-	[openssl/md5.h],
-	[], [AC_MSG_ERROR([md5.h header not found])]
-)
-AC_CHECK_LIB(
-	[crypto], [MD5],
-	[], [AC_MSG_ERROR([crypto library not found])]
-)
-AC_CHECK_HEADERS(
-	[poll.h],
-	[], [AC_MSG_ERROR([poll.h header not found])]
-)
-
-# support for configuration reload
-AC_CHECK_HEADERS([sys/inotify.h])
 
 # support for debugging
 AC_ARG_ENABLE(
@@ -41,7 +17,18 @@ AS_IF([test "x$enable_debug" = "xyes"],
 	[AC_DEFINE([DEBUG], [1], [Define to 1 if the debugging is enabled])]
 )
 
-# support for libnotify
+AC_CHECK_HEADERS(
+	[poll.h],
+	[], [AC_MSG_ERROR([poll.h header not found])]
+)
+
+# support for configuration reload
+AC_CHECK_HEADERS([sys/inotify.h])
+
+PKG_CHECK_MODULES([LIBCURL], [libcurl])
+PKG_CHECK_MODULES([LIBCRYPTO], [libcrypto])
+
+# support for desktop notifications
 AC_ARG_ENABLE(
 	[libnotify],
 	AS_HELP_STRING([--enable-libnotify], [enable libnotify support])
@@ -49,7 +36,7 @@ AC_ARG_ENABLE(
 AM_CONDITIONAL([ENABLE_LIBNOTIFY], [test "x$enable_libnotify" = "xyes"])
 AS_IF([test "x$enable_libnotify" = "xyes"], [
 	PKG_CHECK_MODULES(
-		[libnotify], [libnotify >= 0.7],
+		[LIBNOTIFY], [libnotify >= 0.7],
 		[AC_DEFINE([ENABLE_LIBNOTIFY], [1], [Define to 1 if the libnotify is enabled])]
 	)
 ])
