Use bundled MD5 if the global one is not usable
Lately, there have been a lot of usability troubles with the MD5
digesting function on the OS X. Since, the solution from the commit
e2ef34f seems not to work properly, we will provide bundled version
of this algorithm - the public domain one.

Fixes #8

--- a/configure.ac
+++ b/configure.ac
@@ -1,44 +1,45 @@
 # cmusfm - configure.ac
-# Copyright (c) 2014-2016 Arkadiusz Bokowy
+# Copyright (c) 2014-2017 Arkadiusz Bokowy
 
-AC_INIT([cmusfm], [0.3.0], [arkadiusz.bokowy@gmail.com])
-AC_CONFIG_HEADERS([config.h])
+AC_PREREQ([2.59])
+AC_INIT([cmusfm], [0.3.2], [arkadiusz.bokowy@gmail.com])
 AM_INIT_AUTOMAKE([foreign subdir-objects -Wall -Werror])
 
+AC_CONFIG_HEADERS([config.h])
+
 AC_PROG_CC
+AC_PROG_INSTALL
 AM_PROG_CC_C_O
 
 # support for debugging
-AC_ARG_ENABLE(
-	[debug],
-	AS_HELP_STRING([--enable-debug], [enable debugging support])
-)
-AS_IF([test "x$enable_debug" = "xyes"],
-	[AC_DEFINE([DEBUG], [1], [Define to 1 if the debugging is enabled])]
-)
+AC_ARG_ENABLE([debug],
+	AS_HELP_STRING([--enable-debug], [enable debugging support]))
+AM_CONDITIONAL([ENABLE_DEBUG], [test "x$enable_debug" = "xyes"])
+AM_COND_IF([ENABLE_DEBUG], [
+	AC_DEFINE([DEBUG], [1], [Define to 1 if the debugging is enabled.])
+])
 
-AC_CHECK_HEADERS(
-	[poll.h],
-	[], [AC_MSG_ERROR([poll.h header not found])]
-)
+AC_CHECK_HEADERS([poll.h],
+	[], [AC_MSG_ERROR([poll.h header not found])])
 
 # support for configuration reload
 AC_CHECK_HEADERS([sys/inotify.h])
 
+# support for system-wide MD5
+LIBCRYPTO_CFLAGS=
+LIBCRYPTO_LIBS=
+AC_CHECK_HEADERS([openssl/md5.h], [
+	PKG_CHECK_MODULES([LIBCRYPTO], [libcrypto])
+])
+
 PKG_CHECK_MODULES([LIBCURL], [libcurl])
-PKG_CHECK_MODULES([LIBCRYPTO], [libcrypto])
 
 # support for desktop notifications
-AC_ARG_ENABLE(
-	[libnotify],
-	AS_HELP_STRING([--enable-libnotify], [enable libnotify support])
-)
+AC_ARG_ENABLE([libnotify],
+	AS_HELP_STRING([--enable-libnotify], [enable libnotify support]))
 AM_CONDITIONAL([ENABLE_LIBNOTIFY], [test "x$enable_libnotify" = "xyes"])
-AS_IF([test "x$enable_libnotify" = "xyes"], [
-	PKG_CHECK_MODULES(
-		[LIBNOTIFY], [libnotify >= 0.7],
-		[AC_DEFINE([ENABLE_LIBNOTIFY], [1], [Define to 1 if the libnotify is enabled])]
-	)
+AM_COND_IF([ENABLE_LIBNOTIFY], [
+	PKG_CHECK_MODULES([LIBNOTIFY], [libnotify >= 0.7])
 ])
 
 AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
