Receive album artist and MusicBrainz track ID
It seems, that from cmus 2.8.0 upward it will be possible to receive
album artist. Since this field is recognized by the last.fm API, so
why not to use it.

Fixes #17 and closes #16

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,14 +1,18 @@
 # cmusfm - Makefile.am
-# Copyright (c) 2015 Arkadiusz Bokowy
+# Copyright (c) 2015-2018 Arkadiusz Bokowy
 
 TESTS = \
 	test-cache \
 	test-server-notify \
 	test-server-submit01 \
-	test-server-submit02
+	test-server-submit02 \
+	test-server-submit03
 
 check_PROGRAMS = \
 	test-cache \
 	test-server-notify \
 	test-server-submit01 \
-	test-server-submit02
+	test-server-submit02 \
+	test-server-submit03
+
+test_server_submit03_LDADD = -lpthread
