--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - name: Install Dependencies
       run: |
+        sudo apt update
         sudo apt install --yes --quiet --no-install-recommends \
           libcurl4-openssl-dev \
           libnotify-dev
