--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -10,6 +10,7 @@ jobs:
         features:
         - --enable-debug
         - --enable-libnotify
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
     - name: Install Dependencies
@@ -32,4 +33,8 @@ jobs:
       run: make && make check TESTS=
     - name: Run Test
       working-directory: ${{ github.workspace }}/build
-      run: make check && cat test/*.log
+      run: make check
+    - name: Show Test Log
+      if: ${{ always() }}
+      working-directory: ${{ github.workspace }}/build
+      run: cat test/*.log
