--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -11,7 +11,7 @@ jobs:
         - ubuntu-18.04
         - ubuntu-latest
         features:
-        - --enable-debug
+        - --enable-debug --enable-manpages
         - --enable-libnotify
       fail-fast: false
     runs-on: ${{ matrix.os }}
@@ -21,7 +21,8 @@ jobs:
         sudo apt update
         sudo apt install --yes --quiet --no-install-recommends \
           libcurl4-openssl-dev \
-          libnotify-dev
+          libnotify-dev \
+          python-docutils
     - uses: actions/checkout@v2
     - name: Create Build Environment
       run: |
