Add support create man pages

--- a/configure.ac
+++ b/configure.ac
@@ -60,5 +60,14 @@ AM_COND_IF([ENABLE_LIBNOTIFY], [
 	AC_DEFINE([ENABLE_LIBNOTIFY], [1], [Define to 1 if libnotify is enabled.])
 ])
 
+# support manpages
+AC_ARG_ENABLE([manpages],
+	AS_HELP_STRING([--enable-manpages], [enable building of man pages (requires rst2man)]))
+AM_CONDITIONAL([ENABLE_MANPAGES], [test "x$enable_manpages" = "xyes"])
+AM_COND_IF([ENABLE_MANPAGES], [
+	AC_PATH_PROGS([RST2MAN], [rst2man rst2man.py])
+	AS_IF([test "x$RST2MAN" = "x"], [AC_MSG_ERROR([[--enable-manpages requires rst2man]])])
+])
+
 AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
 AC_OUTPUT
