--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,4 +1,4 @@
-# BlueALSA - Makefile.am
+# cmusfm - Makefile.am
 # Copyright (c) 2016-2021 Arkadiusz Bokowy
 
 man1_MANS = cmusfm.1
@@ -7,4 +7,4 @@ SUFFIXES = .rst
 MOSTLYCLEANFILES = $(man1_MANS)
 
 .rst:
-	$(SED) 's/\$$VERSION\$$/@PACKAGE_STRING@/' $< | $(RST2MAN) - $@
+	sed 's/\$$VERSION\$$/@PACKAGE_STRING@/' $< | $(RST2MAN) - $@
