--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,6 @@
 # cmusfm - Makefile.am
-# Copyright (c) 2016-2021 Arkadiusz Bokowy
+# SPDX-FileCopyrightText: 2016-2024 Arkadiusz Bokowy and contributors
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 man1_MANS = cmusfm.1
 
