--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2014-2024 Arkadiusz Bokowy and contributors
+# SPDX-License-Identifier: CC0-1.0
+
 # Object files
 *.o
 *.ko
@@ -25,11 +28,16 @@
 # Autotools
 /autom4te.cache/
 /build*/
+/m4/
 /aclocal.m4
+/ar-lib
 /compile
+/config.guess
+/config.sub
 /configure
 /depcomp
 /install-sh
+/ltmain.sh
 /missing
 /test-driver
 Makefile.in
