--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -1,8 +1,13 @@
+# SPDX-FileCopyrightText: 2014-2024 Arkadiusz Bokowy and contributors
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 name: CI - Build and Test
+
 on:
   push:
   pull_request:
     branches: [ master ]
+
 jobs:
   build:
     strategy:
@@ -20,7 +25,7 @@ jobs:
           libcurl4-openssl-dev
           libnotify-dev
           python3-docutils
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
     - name: Create Build Environment
       run: |
         mkdir -p ${{ github.workspace }}/build
