--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -39,7 +39,7 @@ jobs:
       run: make && make check TESTS=
     - name: Run Test
       working-directory: ${{ github.workspace }}/build
-      run: make check
+      run: make -j8 check
     - name: Show Test Log
       if: ${{ always() }}
       working-directory: ${{ github.workspace }}/build
